--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@3rdweb/hooks": "^1.6.0",
+    "@3rdweb/react": "^1.7.0",
+    "@3rdweb/sdk": "^1.29.10",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
