--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
     "grommet": "^2.19.1",
+    "next": "^12.0.7",
     "polished": "^4.1.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -17,11 +18,17 @@
     "styled-components": "^5.3.3",
     "web-vitals": "^2.1.2"
   },
-  "scripts": {
+  "_scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
+  },
+  "scripts": {
+    "dev": "next dev",
+    "start": "next start",
+    "build": "next build",
+    "lint": "next lint"
   },
   "eslintConfig": {
     "extends": [
